# mpn-rl

./: .gitignore  NEUROGYM_README.md  README.md  check_reward_timing.py  compare_experiments.py  compare_models.py  dummy.job  dummy.sh  dummy_args.txt  evaluate_multiple_seeds.py  example_usage.py  generate_exp_name.py  generate_table_images.py  main.py  main_a2c.py  model_utils.py  mpn_dqn.py  mpn_module.py  mpn_poly_module.py  mpn_torchrl.py  mpn_torchrl_module.py  neurogym_transform.py  neurogym_wrapper.py  oracle_agents.py  pca_analysis.py  plot_custom_sweep_bar.py  plot_custom_sweep_curves.py  plot_episode_rewards.py  plot_eval_table.py  plot_gonogo_random_agents.py  plot_id_lstm_fb.py  plot_id_mpn_curve.py  plot_layer_heatmap.py  plot_training_metrics.py  plot_trial_appendix.py  plot_trial_lengths.py  plot_trial_lengths_all_envs.py  plot_trial_lengths_per_task.py  pyproject.toml  query_experiments.py  (+15 more)
ai_docs/: DRQN_FIXES_NEEDED.md  EXPERIMENTS.md  FUTURE_TASKS.md  IMPLEMENTATION_REFERENCE.md  MPN_TRAINING_ARCHITECTURE.md  NEUROGYM_README.md  README.md  RESEARCH_QUESTIONS.md  RNN_RL_CHALLENGES.md  SEQUENCE_REPLAY_EXPLAINED.md  SPEED_OPTIMIZATIONS.md  USAGE_EXAMPLES.md  replay_buffer_insight.md
ai_docs/2025-10-06/: CLEANUP_AND_BUILD.md  CODE_CHANGES.md  SESSION_SUMMARY.md
ai_docs/2025-10-07/: SESSION_SUMMARY.md
ai_docs/2025-10-08/: SESSION_SUMMARY.md
ai_docs/2025-10-13/: architecture_diagrams.md  implementation_summary.md  neurogym_integration_progress.md
ai_scripts/: test_frozen_gradients.py  test_neurogym_debug.py  test_neurogym_trials.py  test_trial_detection.py
condor/args/: train_a2c_run1_args.txt  train_a2c_run2_args.txt  train_a2c_run3_args.txt  train_gonogo_args.txt  train_neurogym_a2c_args.txt  train_neurogym_args.txt  train_neurogym_sweep_args.txt  train_wm_sweep_args.txt
condor/jobs/: train_a2c_run1.job  train_a2c_run2.job  train_a2c_run3.job  train_gonogo.job  train_neurogym.job  train_neurogym_a2c.job  train_neurogym_sweep.job  train_wm_sweep.job  train_wm_sweep_2x.job
condor/scripts/: train_a2c_run1.sh  train_a2c_run2.sh  train_a2c_run3.sh  train_gonogo.sh  train_neurogym.sh  train_neurogym_a2c.sh  (+3 more)
torch-rl/: ngymtutorial.py  ngymtutorial_mpn.py  test_gonogo_reward.py
(+5 files in other folders)
