[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpn-rl"
version = "0.1.0"
description = "Multi-Plasticity Networks for Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "gymnasium>=0.29.0",
    "neurogym",
    "tqdm",
    "wandb",
    "tensordict>=0.2.0",
    "torchrl",
]

[tool.setuptools]
py-modules = [
    "main_a2c",
    "main",
    "mpn_module",
    "mpn_poly_module",
    "mpn_torchrl_module",
    "rnn_module",
    "model_utils",
    "custom_envs",
    "oracle_agents",
    "temporal_order_env",
    "neurogym_transform",
    "neurogym_wrapper",
    "query_experiments",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
]
